# thread-manager

./: .env.sample  .gitignore  README.md  ai.py  app.py  app_config.py  authorization.py  autodelete.py  birdbuddy_to_cosmos.py  blog_reader.py  check_for_updates.py  content_generator.py  content_gererator.py  cosmosdb.py  crm.py  notification_email.py  notifier.py  post_to_bluesky.py  pyproject.toml  requirements.txt  sitemaps.py  social_media_poster.py  threads_content.py  threads_data.py
.github/workflows/: main_threadmanager.yml  main_tm-runner.yml
content/birds/: __init__.py  bird_content.py  birdbuddy_to_cosmos.py  birds_blueprint.py  birds_db.py
content/blog_promo/: __init__.py  blog_content.py  blog_posts_db.py  blog_promo_blueprint.py  blog_reader.py  sitemaps.py
content/countdown/: __init__.py  countdown_blueprint.py  countdown_content.py
content/financial/: __init__.py  alpha_vantage.py  financial_content.py
cosmosdb/: __init__.py  _dbutils.py  auth.py  birds.py  blog.py  dashboard.py  motd.py  prompts.py  too_far.py  ungovernable.py  visits.py
dashboard/: __init__.py  bluesky_data.py  dashboard_blueprint.py  dashboard_db.py  threads_data.py
flask_app/: app.py
fred/: fred_content.py
social_media/: __init__.py  bluesky.py  document.py  linkedin.py  poster.py  scheduler.py  scheduler_blueprint.py  smp_blueprint.py  threads.py
social_media_templates/: li_article.json  li_comment.json  li_initialize_upload.json  li_text.json
templates/: auth_error.html  base.html  bird_details.html  bird_list.html  bsky_posted.html  config_error.html  dashboard.html  display.html  display_json.html  energy_sums.html  index.html  login.html  not_authorized.html  post_details.html  post_form.html  post_queue.html  task_detail.html  task_form.html  task_list.html
tests/: test_fred.py  test_poster.py
tm-runner/: function_app.py
too_far/: process_image_folder.py
(+55 files in other folders)
